--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -9,10 +9,13 @@
 <body>
     <div class="clear"></div>
 <div class="gameouter">
+   
     <div class="container">
+        <h1>2048 Game</h1>
  <div class="heading">
 
-            <div class="main-title">Join the numbers and get to the 2048 tile!</div> 
+            <!-- <div class="main-title">Join the numbers and get to the 2048 tile!</div>  -->
+             
             <div class="newgame-score-block">
                 <div class="score-block">
                     <div class="score-container">0</div>
