--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -94,7 +94,9 @@
         </p> -->
 
     </div></div>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
     <script src="script.js"></script>
+    
 </body>
 </html>
 
