--- a/2048Game/index.html
+++ b/2048Game/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <title>2048</title>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+    <script src="script.js"></script>
 </head>
 <body>
     <div class="clear"></div>
@@ -21,7 +23,7 @@
                     <div class="score-container">0</div>
                     <div class="best-container">0</div>
                 </div>
-                <div class="restart-game-btn-block"><a class="restart-button"id="restartBtn">New Game</a></div>
+                <div class="restart-game-btn-block"><button class="restart-button"id="restartBtn">New Game</button></div>
 
 
             </div>
@@ -94,8 +96,8 @@
         </p> -->
 
     </div></div>
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
-    <script src="script.js"></script>
+  
+    <!-- <script src="script.js"></script> -->
     
 </body>
 </html>
