made portfolio responsive

--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
 
               <div class="about-me-nav-right">
                 <nav class="nav">
-                  <ul class="nav__list">
+                  <div class="hamburger-menu" id="hamburger-menu">
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                    <div class="bar"></div>
+                  </div>
+                  <ul class="nav__list" id="nav-list">
                     <li><a href="#home" class="nav__link">Home</a></li>
                     <li>
                       <a href="#projects" class="nav__link"> projects</a>
