Modified 2048 game project image

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <div class="project-item">
               <div class="project-img">
                 <img
-                  src="mainimages/2048Game.jpeg"
+                  src="mainimages/2048game.png"
                   alt="image of project"
                 />
               </div>
