Add new project

--- a/index.html
+++ b/index.html
@@ -202,6 +202,27 @@
                 </button>
               </div>
             </div>
+<!-- pr. -->
+<div class="project-item">
+  <div class="project-img">
+    <img
+      src="mainimages/calculator.png"
+      alt="image of project"
+    />
+  </div>
+  <div class="project-info">
+    <h3>Calculator</h3>
+    <p>
+     Themed calculator for calculations.
+    </p>
+    <button>
+      <a href="https://tailwind-css-projects-peach.vercel.app/calculator/index.html" target="blank"
+        >Live Demo</a
+      >
+    </button>
+  </div>
+</div>
+
              <!-- pr -->
         <div class="project-item">
           <div class="project-img">
