Add new project

--- a/index.html
+++ b/index.html
@@ -223,6 +223,27 @@
   </div>
 </div>
 
+<!-- pr. -->
+<div class="project-item">
+  <div class="project-img">
+    <img
+      src="mainimages/ageCalculator.png"
+      alt="image of project"
+    />
+  </div>
+  <div class="project-info">
+    <h3>Age Calculator</h3>
+    <p>
+     calculator to calculate age.
+    </p>
+    <button>
+      <a href="https://tailwind-css-projects-peach.vercel.app/ageCalculator/index.html" target="blank"
+        >Live Demo</a
+      >
+    </button>
+  </div>
+</div>
+
              <!-- pr -->
         <div class="project-item">
           <div class="project-img">
