Add css to  terrarium

--- a/terrarium/index.html
+++ b/terrarium/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome to my Virtual Terrarium</title>
   </head>
   <body>
-    <h1>My Terrarium</h1>
+    <h1 style="color: red">My Terrarium</h1>
     <div id="page">
       <div id="left-container" class="container">
         <div class="plant-holder">
