--- a/terrarium/index.html
+++ b/terrarium/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- t's important to have the HTML elements fully available for dragging before we allow the drag script to be executed.thats why used defer -->
+    <script src="./script.js" defer></script>
     <title>Welcome to my Virtual Terrarium</title>
   </head>
   <body>
