Add functality to move the plants

--- a/index.html
+++ b/index.html
@@ -243,7 +243,21 @@
     </button>
   </div>
 </div>
-
+    <!-- pr -->
+    <div class="project-item">
+      <div class="project-img">
+        <img src="" alt="image of pproject"/>
+      </div>
+      <div class="project-info">
+        <h3>Terrarium</h3>
+        <p>Design Your own terrarium</p>
+        <button>
+          <a href="terrarium/index.html" target="blank"
+            >Live Demo</a
+          >
+        </button>
+      </div>
+    </div>
              <!-- pr -->
         <div class="project-item">
           <div class="project-img">
