Made new chnges in game'

--- a/contactPageDesign/index.html
+++ b/contactPageDesign/index.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Contact Page</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="main-container">
-        <div class="container">
-            <h1 class="title">Send me a Message</h1>
-            <p>Feel free to get in touch with me with anything related to Web Development or you can just say hi. I will get back to you as soon as possible.</p>
-            <form id = "form">
-                <div class="wrapper">
-                    <input type="text" placeholder="Your name">
-                </div>
-                <div class="wrapper">
-                    <input type="email" placeholder="Your email">
-                </div>
-                <div class="wrapper">
-                    <input type="text" placeholder="Subject">
-                </div>
-                <div class="wrapper">
-                    <textarea placeholder="Message"></textarea>
-                </div>
-                <button>Send</button>
-            </form>
-        </div>
+      <div class="container">
+        <h1 class="title">Send me a Message</h1>
+        <p>
+          Feel free to get in touch with me with anything related to Web
+          Development or you can just say hi. I will get back to you as soon as
+          possible.
+        </p>
+        <form id="form">
+          <div class="wrapper">
+            <input type="text" placeholder="Your name" />
+          </div>
+          <div class="wrapper">
+            <input type="email" placeholder="Your email" />
+          </div>
+          <div class="wrapper">
+            <input type="text" placeholder="Subject" />
+          </div>
+          <div class="wrapper">
+            <textarea placeholder="Message"></textarea>
+          </div>
+          <button>Send</button>
+        </form>
+      </div>
     </div>
-    <script src = "script.js"></script>
-</body>
+    <script src="script.js"></script>
+  </body>
 </html>
